[KARAF-5448] Fix java 9 warning for TCPEndpoint access
Former-commit-id: 2fdf6f60638411c7ec6755cf66d4c8a3e79bea5d